--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,21 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootswatch/5.3.8/cerulean/bootstrap.min.css">
 </head>
 <body>
-   
+    <div class="container mt-5">
+        <h1 class="mb-4">Urlaubsplaner</h1>
+        <p class="lead">Welcome to your vacation planner application.</p>
+        
+        <div class="btn-group" role="group">
+            <button type="button" class="btn btn-primary">Primary</button>
+            <button type="button" class="btn btn-secondary">Secondary</button>
+            <button type="button" class="btn btn-success">Success</button>
+            <button type="button" class="btn btn-danger">Danger</button>
+        </div>
+    </div>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.8/js/bootstrap.bundle.min.js"></script>
+</body>
+<body>
 
 </body>
 </html>
