--- a/public/profile.html
+++ b/public/profile.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mein Profil</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootswatch/5.3.8/cerulean/bootstrap.min.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
@@ -42,8 +43,11 @@
             <a href="index.html" class="text-decoration-none">&larr; Zurück zur Startseite</a>
         </div>
     </div>
-
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.8/js/bootstrap.bundle.min.js"></script>
-    <script src="script.js"></script>
+    
+    <!--Fußzeile: wird über .EventListener('DOMContentLoaded') aus footer.html geladen-->
+    <div class="footer-placeholder"></div>
+    
+    <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.8/js/bootstrap.bundle.min.js"></script>
+--><script src="script.js"></script>
 </body>
 </html>
