--- a/public/footer.html
+++ b/public/footer.html
@@ -1,5 +1,7 @@
 
-<!--Fußzeile: wird über .EventListener('DOMContentLoaded') aus footer.html geladen-->
+<!--Fußzeile
+    wird über .EventListener('DOMContentLoaded') aus footer.html geladen
+-->
 <footer class="bg-primary text-white text-center py-3">
     <p>&copy; 2025 Urlaubspalner. All rights reserved.</p>
     <nav>
