--- a/public/profile.html
+++ b/public/profile.html
@@ -1,4 +1,10 @@
 <!DOCTYPE html>
+<!--  Profilseite für den Urlaubsplaner
+      Zeigt Benutzerdaten an und ermöglicht das Ändern einiger Daten
+      sowie das Logout.
+
+-->
+
 <html lang="de">
 <head>
     <meta charset="UTF-8">
@@ -46,7 +52,7 @@
     
     <!--Fußzeile: wird über .EventListener('DOMContentLoaded') aus footer.html geladen-->
     <div class="footer-placeholder"></div>
-    
+
     <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.8/js/bootstrap.bundle.min.js"></script>
 --><script src="script.js"></script>
 </body>
