--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <!-- Navigationsleiste oben-->
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary mb-5">
         <div class="container-fluid">
             <a class="navbar-brand" href="index.html">Urlaubsplaner</a>
