--- a/public/footer.html
+++ b/public/footer.html
@@ -5,9 +5,9 @@
 <footer class="bg-primary text-white text-center py-3">
     <p>&copy; 2025 Urlaubspalner. All rights reserved.</p>
     <nav>
-        <a href="index.html">Home</a> |
-        <a href="login.html">Login</a> |
-        <a href="profile.html">Profile</a>
+        <a href="index.html" class="text-white">Home</a> |
+        <a href="login.html" class="text-white">Login</a> |
+        <a href="profile.html" class="text-white">Profile</a>
     </nav>
 </footer>
 
