Major changes -footer (style and place) - moved some functions from "script.js" to new JS "script_Effects.js" - renamed script.js to script_User.js - stylesheet change to make Elements more modern

--- a/public/footer.html
+++ b/public/footer.html
@@ -1,8 +1,7 @@
 
-<!--Fußzeile
-    wird über .EventListener('DOMContentLoaded') aus footer.html geladen
+<!--Fußzeile  wird über .EventListener('DOMContentLoaded') aus footer.html geladen
 -->
-<footer class="bg-primary text-white text-center py-3">
+<footer class="footer bg-primary footer-placeholder text-white text-center py-3" style="margin-top: 20px;">
     <p>&copy; 2025 Urlaubspalner. All rights reserved.</p>
     <nav>
         <a href="index.html" class="text-white">Home</a> |
