--- a/public/user_registration.html
+++ b/public/user_registration.html
@@ -77,7 +77,7 @@
                     <div class="form-check mb-4 mt-2">
                         <input class="form-check-input" type="checkbox" value="" id="agbCheck" required>
                         <label class="form-check-label" for="agbCheck">
-                          Ich akzeptiere die AGB.
+                          Ich bin kein Roboter
                         </label>
                     </div>
 
