--- a/public/index.html
+++ b/public/index.html
@@ -22,15 +22,24 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a class="nav-link active" href="profile.html">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-person-circle me-1" viewBox="0 0 16 16">
-                                <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0"/>
-                                <path fill-rule="evenodd" d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8m8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1"/>
-                            </svg>
-                            Mein Profil
-                        </a>
+                         <a class="nav-link" href="index.html">Start</a>
                     </li>
-                </ul>
+                    <li class="nav-item">
+                        <a class="nav-link" href="user_registration.html">Registrieren</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="login.html">Login</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" href="profile.html">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-person-circle me-1" viewBox="0 0 16 16">
+                        <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0"/>
+                        <path fill-rule="evenodd" d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8m8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1"/>
+                        </svg>
+                        Mein Profil
+                    </a>
+                    </li>
+                    </ul>
             </div>
         </div>
     </nav>
@@ -40,7 +49,12 @@
             <h1 class="display-4">Willkommen!</h1>
             <p class="lead">Planen Sie Ihren Urlaub einfach und effizient.</p>
             <hr class="my-4">
-            <p>Nutzen Sie das Menü oben rechts, um zu Ihrem Profil zu gelangen.</p>
+            <p>Haben Sie noch kein Konto oder wollen Sie sich anmelden?</p>
+    
+            <div class="d-grid gap-2 d-md-block">
+            <a href="user_registration.html" class="btn btn-primary btn-lg">Jetzt Registrieren</a>
+            <a href="login.html" class="btn btn-outline-secondary btn-lg">Login</a>
+            </div>
         </div>
     </div>
 
