--- a/public/login.html
+++ b/public/login.html
@@ -15,15 +15,24 @@
 
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
-                    <li class="nav-item">
-                        <a class="nav-link active" href="profile.html">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-person-circle me-1" viewBox="0 0 16 16">
-                                <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0"/>
-                                <path fill-rule="evenodd" d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8m8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1"/>
-                            </svg>
-                            Mein Profil
-                        </a>
-                    </li>
+                <li class="nav-item">
+                <a class="nav-link" href="index.html">Start</a>
+                </li>
+                <li class="nav-item">
+                <a class="nav-link" href="user_registration.html">Registrieren</a>
+                </li>
+                <li class="nav-item">
+                <a class="nav-link" href="login.html">Login</a>
+                </li>
+                <li class="nav-item">
+                <a class="nav-link active" href="profile.html">
+                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-person-circle me-1" viewBox="0 0 16 16">
+                    <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0"/>
+                    <path fill-rule="evenodd" d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8m8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1"/>
+                </svg>
+                Mein Profil
+                    </a>
+                </li>
                 </ul>
             </div>
         </div>
@@ -31,7 +40,7 @@
 
     <div class="container">
         <h1>Willkommen zurück!</h1>
-        <form id="loginForm">
+        <form id="loginForm" onsubmit="return loginUser(event)">
             <div class="mb-3">
                 <label for="username" class="form-label">Benutzername</label>
                 <input type="text" class="form-control" id="username" required>
@@ -41,27 +50,13 @@
                 <input type="password" class="form-control" id="password" required>
             </div>
             <button type="submit" class="btn btn-primary">Einloggen</button>
+            <div class="mt-3 text-center">
+            <small>Noch kein Konto? <a href="user_registration.html">Hier registrieren</a></small>
+            </div>
         </form>
         <div id="errorMessage" class="alert alert-danger mt-3" style="display:none;"></div>
     </div>
     
-    <script>
-        document.getElementById('loginForm').addEventListener('submit', function(event) {
-            event.preventDefault();
-
-            var username = document.getElementById('username').value;
-            var password = document.getElementById('password').value;
-
-            // Hier sollte die Authentifizierung erfolgen
-            if (username === 'admin' && password === 'password') {
-                window.location.href = 'dashboard.html';
-            } else {
-                var errorMessage = document.getElementById('errorMessage');
-                errorMessage.textContent = 'Ungültiger Benutzername oder Passwort.';
-                errorMessage.style.display = 'block';
-            }
-        });
-    </script>
 
     <!--Fußzeile: wird über .EventListener('DOMContentLoaded') aus footer.html geladen-->
     <div class="footer-placeholder"></div>
