--- a/public/login.html
+++ b/public/login.html
@@ -1,10 +1,13 @@
+<!DOCTYPE html>
+<html lang="de">
+<head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Urlaubspalner - Login</title>
+    <title>Urlaubsplaner - Login</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootswatch/5.3.3/cerulean/bootstrap.min.css">
     <link rel="stylesheet" href="style.css">
 </head>
 <body class="modern-background">
-    <!-- Navigationsleiste oben-->
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary mb-5 sticky-top" style="box-shadow: 0 2px 8px rgba(0,0,0,0.1);">
         <div class="container-fluid">
             <a class="navbar-brand" href="index.html">Urlaubsplaner</a>
@@ -16,7 +19,14 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a class="nav-link active" href="profile.html">
+                        <a class="nav-link active" href="login.html">Login</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="user_registration.html">Registrieren</a>
+                    </li>
+                    <li class="nav-item border-start mx-2 d-none d-lg-block"></li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="profile.html">
                             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-person-circle me-1" viewBox="0 0 16 16">
                                 <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0"/>
                                 <path fill-rule="evenodd" d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8m8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1"/>
@@ -29,20 +39,33 @@
         </div>
     </nav>
 
-    <div class="container">
-        <h1>Willkommen zurück!</h1>
-        <form id="loginForm">
-            <div class="mb-3">
-                <label for="username" class="form-label">Benutzername</label>
-                <input type="text" class="form-control" id="username" required>
+    <div class="container" style="max-width: 500px; margin-top: 50px;">
+        <div class="card shadow">
+            <div class="card-header bg-primary text-white">
+                <h4 class="mb-0">Willkommen zurück!</h4>
             </div>
-            <div class="mb-3">
-                <label for="password" class="form-label">Passwort</label>
-                <input type="password" class="form-control" id="password" required>
+            <div class="card-body p-4">
+                <form id="loginForm">
+                    <div class="mb-3">
+                        <label for="username" class="form-label">Benutzername</label>
+                        <input type="text" class="form-control" id="username" required>
+                    </div>
+                    <div class="mb-3">
+                        <label for="password" class="form-label">Passwort</label>
+                        <input type="password" class="form-control" id="password" required>
+                    </div>
+                    <div class="d-grid">
+                        <button type="submit" class="btn btn-primary btn-lg">Einloggen</button>
+                    </div>
+                </form>
+                
+                <div class="text-center mt-3">
+                    <p>Noch kein Konto? <a href="user_registration.html" class="text-decoration-underline">Hier registrieren</a></p>
+                </div>
+
+                <div id="errorMessage" class="alert alert-danger mt-3" style="display:none;"></div>
             </div>
-            <button type="submit" class="btn btn-primary">Einloggen</button>
-        </form>
-        <div id="errorMessage" class="alert alert-danger mt-3" style="display:none;"></div>
+        </div>
     </div>
     
     <script>
@@ -52,18 +75,19 @@
             var username = document.getElementById('username').value;
             var password = document.getElementById('password').value;
 
-            // Hier sollte die Authentifizierung erfolgen
-            if (username === 'admin' && password === 'password') {
-                window.location.href = 'dashboard.html';
+            // Einfache Frontend-Simulation: Wenn Felder ausgefüllt sind, lass den User rein
+            if (username && password) {
+                // Hier könnten wir den Namen speichern, um ihn im Profil anzuzeigen
+                // localStorage.setItem('simulatedUser', username);
+                window.location.href = 'profile.html';
             } else {
                 var errorMessage = document.getElementById('errorMessage');
-                errorMessage.textContent = 'Ungültiger Benutzername oder Passwort.';
+                errorMessage.textContent = 'Bitte füllen Sie alle Felder aus.';
                 errorMessage.style.display = 'block';
             }
         });
     </script>
 
-    <!--Fußzeile: wird über .EventListener('DOMContentLoaded') aus footer.html geladen-->
     <div class="footer-placeholder"></div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.8/js/bootstrap.bundle.min.js"></script>
     <script src="script_User.js"></script>
