--- a/public/profile.html
+++ b/public/profile.html
@@ -45,8 +45,11 @@
         <div class="card border-primary mb-3" style="max-width: 40rem; margin: auto;">
             <div class="card-header">Mein Profil</div>
             <div class="card-body">
-                <h4 class="card-title" id="profile-name">Lade Daten...</h4>
-                <p class="card-text text-muted" id="profile-email">Bitte warten...</p>
+
+                <!-- Profilname -->
+                <h4 class="card-title skeleton" id="profile-name"></h4>
+                <!-- Email -->
+                <p class="card-text text-muted skeleton" id="profile-email"></p>
                 
                 <hr>
                 
