--- a/public/user_registration.html
+++ b/public/user_registration.html
@@ -53,7 +53,7 @@
             <div class="card-body p-4">
                 
                 <!--Registrierungformular -->
-                <form id="registrationForm" action="#" method="GET" onsubmit="return registerUser(event)">
+                <form id="registrationForm" onsubmit="return registerUser(event)">
                     
                     <div class="form-group mb-3">
                         <label for="username" class="form-label fw-bold">Benutzername</label>
