--- a/public/index.html
+++ b/public/index.html
@@ -51,9 +51,9 @@
             <hr class="my-4">
             <p>Haben Sie noch kein Konto oder wollen Sie sich anmelden?</p>
     
-            <div class="d-grid gap-2 d-md-block">
-            <a href="user_registration.html" class="btn btn-primary btn-lg">Jetzt Registrieren</a>
-            <a href="login.html" class="btn btn-outline-secondary btn-lg">Login</a>
+            <div class="d-grid gap-2">
+                <a href="user_registration.html" class="btn btn-primary btn-lg">Jetzt Registrieren</a>
+                <a href="login.html" class="btn btn-outline-secondary btn-lg">Login</a>
             </div>
         </div>
     </div>
