major changes to CSS: jumbotron, Card-header!

--- a/public/footer.html
+++ b/public/footer.html
@@ -2,7 +2,7 @@
 <!--Fußzeile  wird über .EventListener('DOMContentLoaded') aus footer.html geladen
 -->
 <footer class="footer bg-primary footer-placeholder text-white text-center py-3" style="margin-top: 20px;">
-    <p>&copy; 2025 Urlaubspalner. All rights reserved.</p>
+    <p>&copy; 2025 Urlaubsplaner. All rights reserved.</p>
     <nav>
         <a href="index.html" class="text-white">Home</a> |
         <a href="login.html" class="text-white">Login</a> |
