--- a/public/profile.html
+++ b/public/profile.html
@@ -51,7 +51,7 @@
     </nav>
 
     <div class="container">
-        <div class="card border-primary mb-3" style="max-width: 40rem; margin: auto;">
+        <div class="card mb-3 jumbotron fade-in-element" style="max-width: 40rem; margin: auto;">
             <div class="card-header">Mein Profil</div>
             <div class="card-body">
 
