--- a/public/index.html
+++ b/public/index.html
@@ -44,8 +44,9 @@
         </div>
     </nav>
 
+
     <div class="container text-center">
-        <div class="jumbotron mt-5 fade-in-element">
+        <div class="jumbotron fade-in-element">
             <h1 class="display-4">Willkommen!</h1>
             <p class="lead">Planen Sie Ihren Urlaub einfach und effizient.</p>
             <hr class="my-4">
