--- a/public/login.html
+++ b/public/login.html
@@ -40,8 +40,8 @@
 
 
     <div class="container">
-        <div class="jumbotron fade-in-element">
-            <h1>Willkommen zurück!</h1>
+        <div class="jumbotron fade-in-element>">
+            <h1 class="mb-5">Willkommen zurück!</h1>
             
             <form id="loginForm" onsubmit="return loginUser(event)">
                 <div class="mb-3">
