--- a/public/profile.html
+++ b/public/profile.html
@@ -51,8 +51,8 @@
     </nav>
 
     <div class="container">
-        <div class="card mb-3 jumbotron fade-in-element" style="max-width: 40rem; margin: auto;">
-            <div class="card-header">Mein Profil</div>
+        <div class="card register-container mb-3 jumbotron fade-in-element" style="max-width: 40rem; margin: auto;">
+            <div class="card-header bg-primary text-white mb-0 text-center h4">Mein Profil</div>
             <div class="card-body">
 
                 <!-- Profilname -->
