--- a/public/index.html
+++ b/public/index.html
@@ -45,19 +45,18 @@
     </nav>
 
 
-    <div class="container text-center">
-        <div class="jumbotron fade-in-element">
-            <h1 class="display-4">Willkommen!</h1>
-            <p class="lead">Planen Sie Ihren Urlaub einfach und effizient.</p>
-            <hr class="my-4">
-            <p>Haben Sie noch kein Konto oder wollen Sie sich anmelden?</p>
-    
-            <div class="d-grid gap-2">
-                <a href="user_registration.html" class="btn btn-primary btn-lg">Jetzt Registrieren</a>
-                <a href="login.html" class="btn btn-outline-secondary btn-lg">Login</a>
-            </div>
+    <div class="card container text-center jumbotron fade-in-element">
+        <h1 class="display-4">Willkommen!</h1>
+        <p class="lead">Planen Sie Ihren Urlaub einfach und effizient.</p>
+        <hr class="my-4">
+        <p>Haben Sie noch kein Konto oder wollen Sie sich anmelden?</p>
+
+        <div class="d-grid gap-2">
+            <a href="user_registration.html" class="btn btn-primary btn-lg">Jetzt Registrieren</a>
+            <a href="login.html" class="btn btn-outline-secondary btn-lg">Login</a>
         </div>
     </div>
+
 
     <!--Fußzeile: wird über .EventListener('DOMContentLoaded') aus footer.html geladen-->
     <div class="footer-placeholder"></div>
