--- a/public/travel_budget.html
+++ b/public/travel_budget.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html lang="de">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Reisebudget planen</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootswatch/5.3.3/cerulean/bootstrap.min.css">
-</head>
+    <link rel="stylesheet" href="style.css"></head>
+
 <body class="bg-light">
 
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary mb-5">
@@ -14,37 +15,39 @@
         </div>
     </nav>
 
-    <div class="container">
-        <div class="card border-primary mb-3 shadow" style="max-width: 600px; margin: auto;">
-            <div class="card-header bg-primary text-white">Neue Reise planen</div>
-            <div class="card-body">
-                
-                <form id="trip-form" onsubmit="return saveTrip(event)">
-                    
-                    <div class="mb-3">
-                        <label for="trip-destination" class="form-label fw-bold">Wohin soll es gehen?</label>
-                        <input type="text" class="form-control" id="trip-destination" placeholder="z.B. Paris, Rom, Tokio" required>
+
+    <div class="container fade-in-element card register-container jumbotron">
+        <div class="card-header text-white mb-0 text-center h4">Neue Reise Planen </div>
+        <div class="card-body p-4">
+
+            <form id="trip-form" onsubmit="return saveTrip(event)">
+
+                <div class="mb-3">
+                    <label for="trip-destination" class="form-label fw-bold">Wohin soll es gehen?</label>
+                    <input type="text" class="form-control" id="trip-destination" placeholder="z.B. Paris, Rom, Tokio"
+                        required>
+                </div>
+
+                <div class="mb-3">
+                    <label for="trip-budget" class="form-label fw-bold">Reisebudget (€)</label>
+                    <div class="input-group">
+                        <span class="input-group-text">€</span>
+                        <input type="number" class="form-control" id="trip-budget" placeholder="1500" required>
                     </div>
+                </div>
 
-                    <div class="mb-3">
-                        <label for="trip-budget" class="form-label fw-bold">Reisebudget (€)</label>
-                        <div class="input-group">
-                            <span class="input-group-text">€</span>
-                            <input type="number" class="form-control" id="trip-budget" placeholder="1500" required>
-                        </div>
-                    </div>
+                <div class="d-grid gap-2">
+                    <button type="submit" class="btn btn-success btn-lg">Reise speichern</button>
+                    <a href="profile.html" class="btn btn-outline-secondary">Abbrechen & Zurück</a>
+                </div>
 
-                    <div class="d-grid gap-2">
-                        <button type="submit" class="btn btn-success btn-lg">Reise speichern</button>
-                        <a href="profile.html" class="btn btn-outline-secondary">Abbrechen & Zurück</a>
-                    </div>
+            </form>
 
-                </form>
-
-            </div>
         </div>
     </div>
 
+    <script src="script_Effects.js"></script>
     <script src="script_User.js"></script>
 </body>
+
 </html>
