Funktionen in User_Script geändert um mit API endpunkten zu kommunizieren

--- a/public/login.html
+++ b/public/login.html
@@ -45,8 +45,8 @@
         
         <form id="loginForm" onsubmit="return loginUser(event)">
             <div class="mb-3">
-                <label for="username" class="form-label">Benutzername</label>
-                <input type="text" class="form-control" id="username" required>
+                <label for="email" class="form-label">E-Mail-Adresse</label>
+                <input type="email" class="form-control" id="email" placeholder="name@beispiel.de" required>
             </div>
             <div class="mb-3">
                 <label for="password" class="form-label">Passwort</label>
