changed server and thing

--- a/public/login.html
+++ b/public/login.html
@@ -45,8 +45,8 @@
         
         <form id="loginForm" onsubmit="return loginUser(event)">
             <div class="mb-3">
-                <label for="username" class="form-label">Benutzername</label>
-                <input type="text" class="form-control" id="username" required>
+                <label for="email" class="form-label">E-Mail-Adresse</label>
+                <input type="email" class="form-control" id="email" required>
             </div>
             <div class="mb-3">
                 <label for="password" class="form-label">Passwort</label>
@@ -65,9 +65,8 @@
 
 <div class="footer-placeholder"></div>
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.8/js/bootstrap.bundle.min.js"></script>
-<script src="script_Effects.js"></script>
-<script src="script_User.js"></script>
-
-</body>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.8/js/bootstrap.bundle.min.js"></script>
+    <script src="config.js"></script>
+    <script src="script_Effects.js"></script>
+    <script src="script_User.js"></script></body>
 </html>
