--- a/public/profile.html
+++ b/public/profile.html
@@ -160,6 +160,7 @@
     <div class="footer-placeholder"></div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.8/js/bootstrap.bundle.min.js"></script>
+    <script src="config.js"></script>
     <script src="script_Effects.js"></script>
     <script src="script_User.js"></script>
 
