--- a/public/user_registration.html
+++ b/public/user_registration.html
@@ -68,8 +68,6 @@
                             <input type="text" class="form-control" id="lastname" placeholder="Mustermann" required>
                         </div>
                     </div>
-                    <label for="username" class="form-label fw-bold">Benutzername</label>
-                    <input type="text" class="form-control" id="username" placeholder="Dein Spitzname" required>
                 </div>
 
                 <div class="form-group mb-3">
@@ -119,6 +117,7 @@
     <div class="footer-placeholder"></div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.8/js/bootstrap.bundle.min.js"></script>
+    <script src="config.js"></script>
     <script src="script_Effects.js"></script>
     <script src="script_User.js"></script>
 
