--- a/public/travel_budget.html
+++ b/public/travel_budget.html
@@ -60,6 +60,7 @@
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.8/js/bootstrap.bundle.min.js"></script>
+    <script src="config.js"></script>
     <script src="script_Effects.js"></script>
     <script src="script_User.js"></script>
 </body>
