mit Resise hinzufügen -- nur lokal

--- a/public/travel_budget.html
+++ b/public/travel_budget.html
@@ -27,6 +27,14 @@
                     <input type="text" class="form-control" id="trip-destination" placeholder="z.B. Paris, Rom, Tokio"
                         required>
                 </div>
+                <div class="mb-3">
+                    <label class="form-label">Startdatum</label>
+                    <input type="date" class="form-control" id="trip-start" required>
+                </div>
+                <div class="mb-3">
+                    <label class="form-label">Enddatum</label>
+                    <input type="date" class="form-control" id="trip-end" required>
+                </div>
 
                 <div class="mb-3">
                     <label for="trip-budget" class="form-label fw-bold">Reisebudget (€)</label>
