--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,9 @@
                          <a class="nav-link" href="index.html">Start</a>
                     </li>
                     <li class="nav-item">
+                         <a class="nav-link" href="slides.html">Slides</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" href="user_registration.html">Registrieren</a>
                     </li>
                     <li class="nav-item">
